tests/errors/syn_while4.java
public class syn_while4{
public static void main(String[] args){
 while ( true { }
}
}